unpackaged/main/default/objects/ia_crm__Task__c/ia_crm__Task__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>