unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Actual_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Actual_Begin_Date__c</fullName>
    <label>Actual Begin Date</label>
    <type>Date</type>
</CustomField>