unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Billable__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>