unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Description__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>