unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Item__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>