unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Milestone__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>