unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Task__c.ia_crm__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.ia_crm__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Task__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>