unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Percent_Completed__c</fullName>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>