unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Planned_Duration__c</fullName>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>