unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Project__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>ia_crm__Project__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>