unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__Task_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Task_ID__c</fullName>
    <label>Task ID</label>
    <length>65</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>