unpackaged/main/default/objects/ia_crm__Task__c/fields/ia_crm__WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__WBS_Code__c</fullName>
    <label>WBS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>